src/main/java/com/rnehru/dules/parser/DulesParser.java
// Auto generated by Antlr4
package com.rnehru.dules.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
class DulesParser extends org.antlr.v4.runtime.Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, Complete=4, AND=5, OR=6, NOT=7, Number=8, String=9, 
		Ref=10, Date=11, Und=12, LessThan=13, GreaterThan=14;
	public static final int
		RULE_higher = 0, RULE_pageShowRule = 1, RULE_questionShowRule = 2, RULE_rule = 3, 
		RULE_triggers = 4, RULE_statedriven = 5, RULE_contextdriven = 6, RULE_allPagesComplete = 7, 
		RULE_answerDateAfter = 8, RULE_answerDateBefore = 9, RULE_answerExists = 10, 
		RULE_answerIn = 11, RULE_answerLessThan = 12, RULE_answerMatches = 13, 
		RULE_answerMoreThan = 14, RULE_pageComplete = 15, RULE_pageExists = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"higher", "pageShowRule", "questionShowRule", "rule", "triggers", "statedriven", 
			"contextdriven", "allPagesComplete", "answerDateAfter", "answerDateBefore", 
			"answerExists", "answerIn", "answerLessThan", "answerMatches", "answerMoreThan", 
			"pageComplete", "pageExists"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.page('", "')'", "'.question('", "'complete'", "' & '", "' || '", 
			"'!'", null, null, null, null, "'__'", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "Complete", "AND", "OR", "NOT", "Number", "String", 
			"Ref", "Date", "Und", "LessThan", "GreaterThan"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class HigherContext extends ParserRuleContext {
		public PageShowRuleContext pageShowRule() {
			return getRuleContext(PageShowRuleContext.class,0);
		}
		public QuestionShowRuleContext questionShowRule() {
			return getRuleContext(QuestionShowRuleContext.class,0);
		}
		public HigherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_higher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterHigher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitHigher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitHigher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HigherContext higher() throws RecognitionException {
		HigherContext _localctx = new HigherContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_higher);
		try {
			setState(36);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				pageShowRule();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				questionShowRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageShowRuleContext extends ParserRuleContext {
		public RuleContext rule() {
			return getRuleContext(RuleContext.class,0);
		}
		public PageShowRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pageShowRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterPageShowRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitPageShowRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitPageShowRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageShowRuleContext pageShowRule() throws RecognitionException {
		PageShowRuleContext _localctx = new PageShowRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pageShowRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			rule(0);
			setState(40);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionShowRuleContext extends ParserRuleContext {
		public RuleContext rule() {
			return getRuleContext(RuleContext.class,0);
		}
		public QuestionShowRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionShowRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterQuestionShowRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitQuestionShowRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitQuestionShowRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionShowRuleContext questionShowRule() throws RecognitionException {
		QuestionShowRuleContext _localctx = new QuestionShowRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_questionShowRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__2);
			setState(43);
			rule(0);
			setState(44);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleContext extends ParserRuleContext {
		public TriggersContext triggers() {
			return getRuleContext(TriggersContext.class,0);
		}
		public TerminalNode NOT() { return getToken(DulesParser.NOT, 0); }
		public List<RuleContext> rule() {
			return getRuleContexts(RuleContext.class);
		}
		public RuleContext rule(int i) {
			return getRuleContext(RuleContext.class,i);
		}
		public TerminalNode AND() { return getToken(DulesParser.AND, 0); }
		public TerminalNode OR() { return getToken(DulesParser.OR, 0); }
		public RuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleContext rule() throws RecognitionException {
		return rule(0);
	}

	private RuleContext rule(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RuleContext _localctx = new RuleContext(_ctx, _parentState);
		RuleContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_rule, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Complete:
			case String:
				{
				setState(47);
				triggers();
				}
				break;
			case NOT:
				{
				setState(48);
				match(NOT);
				setState(49);
				rule(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(58);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new RuleContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_rule);
						setState(52);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(53);
						match(AND);
						setState(54);
						rule(4);
						}
						break;
					case 2:
						{
						_localctx = new RuleContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_rule);
						setState(55);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(56);
						match(OR);
						setState(57);
						rule(3);
						}
						break;
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TriggersContext extends ParserRuleContext {
		public StatedrivenContext statedriven() {
			return getRuleContext(StatedrivenContext.class,0);
		}
		public ContextdrivenContext contextdriven() {
			return getRuleContext(ContextdrivenContext.class,0);
		}
		public TriggersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triggers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterTriggers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitTriggers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitTriggers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TriggersContext triggers() throws RecognitionException {
		TriggersContext _localctx = new TriggersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_triggers);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Complete:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				statedriven();
				}
				break;
			case String:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				contextdriven();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatedrivenContext extends ParserRuleContext {
		public AllPagesCompleteContext allPagesComplete() {
			return getRuleContext(AllPagesCompleteContext.class,0);
		}
		public PageCompleteContext pageComplete() {
			return getRuleContext(PageCompleteContext.class,0);
		}
		public StatedrivenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statedriven; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterStatedriven(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitStatedriven(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitStatedriven(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatedrivenContext statedriven() throws RecognitionException {
		StatedrivenContext _localctx = new StatedrivenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statedriven);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				allPagesComplete();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				pageComplete();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextdrivenContext extends ParserRuleContext {
		public AnswerExistsContext answerExists() {
			return getRuleContext(AnswerExistsContext.class,0);
		}
		public AnswerMatchesContext answerMatches() {
			return getRuleContext(AnswerMatchesContext.class,0);
		}
		public AnswerInContext answerIn() {
			return getRuleContext(AnswerInContext.class,0);
		}
		public AnswerDateBeforeContext answerDateBefore() {
			return getRuleContext(AnswerDateBeforeContext.class,0);
		}
		public AnswerDateAfterContext answerDateAfter() {
			return getRuleContext(AnswerDateAfterContext.class,0);
		}
		public AnswerLessThanContext answerLessThan() {
			return getRuleContext(AnswerLessThanContext.class,0);
		}
		public AnswerMoreThanContext answerMoreThan() {
			return getRuleContext(AnswerMoreThanContext.class,0);
		}
		public PageExistsContext pageExists() {
			return getRuleContext(PageExistsContext.class,0);
		}
		public ContextdrivenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextdriven; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterContextdriven(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitContextdriven(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitContextdriven(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextdrivenContext contextdriven() throws RecognitionException {
		ContextdrivenContext _localctx = new ContextdrivenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_contextdriven);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				answerExists();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				answerMatches();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				answerIn();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				answerDateBefore();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				answerDateAfter();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(76);
				answerLessThan();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(77);
				answerMoreThan();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(78);
				pageExists();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllPagesCompleteContext extends ParserRuleContext {
		public TerminalNode Complete() { return getToken(DulesParser.Complete, 0); }
		public AllPagesCompleteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allPagesComplete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAllPagesComplete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAllPagesComplete(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAllPagesComplete(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllPagesCompleteContext allPagesComplete() throws RecognitionException {
		AllPagesCompleteContext _localctx = new AllPagesCompleteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_allPagesComplete);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(Complete);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerDateAfterContext extends ParserRuleContext {
		public List<TerminalNode> String() { return getTokens(DulesParser.String); }
		public TerminalNode String(int i) {
			return getToken(DulesParser.String, i);
		}
		public List<TerminalNode> Und() { return getTokens(DulesParser.Und); }
		public TerminalNode Und(int i) {
			return getToken(DulesParser.Und, i);
		}
		public TerminalNode GreaterThan() { return getToken(DulesParser.GreaterThan, 0); }
		public TerminalNode Date() { return getToken(DulesParser.Date, 0); }
		public AnswerDateAfterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerDateAfter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAnswerDateAfter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAnswerDateAfter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAnswerDateAfter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerDateAfterContext answerDateAfter() throws RecognitionException {
		AnswerDateAfterContext _localctx = new AnswerDateAfterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_answerDateAfter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(String);
			setState(84);
			match(Und);
			setState(85);
			match(String);
			setState(86);
			match(Und);
			setState(87);
			match(GreaterThan);
			setState(88);
			match(Date);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerDateBeforeContext extends ParserRuleContext {
		public List<TerminalNode> String() { return getTokens(DulesParser.String); }
		public TerminalNode String(int i) {
			return getToken(DulesParser.String, i);
		}
		public List<TerminalNode> Und() { return getTokens(DulesParser.Und); }
		public TerminalNode Und(int i) {
			return getToken(DulesParser.Und, i);
		}
		public TerminalNode LessThan() { return getToken(DulesParser.LessThan, 0); }
		public TerminalNode Date() { return getToken(DulesParser.Date, 0); }
		public AnswerDateBeforeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerDateBefore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAnswerDateBefore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAnswerDateBefore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAnswerDateBefore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerDateBeforeContext answerDateBefore() throws RecognitionException {
		AnswerDateBeforeContext _localctx = new AnswerDateBeforeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_answerDateBefore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(String);
			setState(91);
			match(Und);
			setState(92);
			match(String);
			setState(93);
			match(Und);
			setState(94);
			match(LessThan);
			setState(95);
			match(Date);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerExistsContext extends ParserRuleContext {
		public List<TerminalNode> String() { return getTokens(DulesParser.String); }
		public TerminalNode String(int i) {
			return getToken(DulesParser.String, i);
		}
		public TerminalNode Und() { return getToken(DulesParser.Und, 0); }
		public AnswerExistsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerExists; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAnswerExists(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAnswerExists(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAnswerExists(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerExistsContext answerExists() throws RecognitionException {
		AnswerExistsContext _localctx = new AnswerExistsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_answerExists);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(String);
			setState(98);
			match(Und);
			setState(99);
			match(String);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerInContext extends ParserRuleContext {
		public List<TerminalNode> String() { return getTokens(DulesParser.String); }
		public TerminalNode String(int i) {
			return getToken(DulesParser.String, i);
		}
		public List<TerminalNode> Und() { return getTokens(DulesParser.Und); }
		public TerminalNode Und(int i) {
			return getToken(DulesParser.Und, i);
		}
		public TerminalNode Ref() { return getToken(DulesParser.Ref, 0); }
		public AnswerInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerIn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAnswerIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAnswerIn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAnswerIn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerInContext answerIn() throws RecognitionException {
		AnswerInContext _localctx = new AnswerInContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_answerIn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(String);
			setState(102);
			match(Und);
			setState(103);
			match(String);
			setState(104);
			match(Und);
			setState(105);
			match(Ref);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerLessThanContext extends ParserRuleContext {
		public List<TerminalNode> String() { return getTokens(DulesParser.String); }
		public TerminalNode String(int i) {
			return getToken(DulesParser.String, i);
		}
		public List<TerminalNode> Und() { return getTokens(DulesParser.Und); }
		public TerminalNode Und(int i) {
			return getToken(DulesParser.Und, i);
		}
		public TerminalNode LessThan() { return getToken(DulesParser.LessThan, 0); }
		public TerminalNode Number() { return getToken(DulesParser.Number, 0); }
		public AnswerLessThanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerLessThan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAnswerLessThan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAnswerLessThan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAnswerLessThan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerLessThanContext answerLessThan() throws RecognitionException {
		AnswerLessThanContext _localctx = new AnswerLessThanContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_answerLessThan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(String);
			setState(108);
			match(Und);
			setState(109);
			match(String);
			setState(110);
			match(Und);
			setState(111);
			match(LessThan);
			setState(112);
			match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnswerMatchesContext extends ParserRuleContext {
		public List<TerminalNode> String() { return getTokens(DulesParser.String); }
		public TerminalNode String(int i) {
			return getToken(DulesParser.String, i);
		}
		public List<TerminalNode> Und() { return getTokens(DulesParser.Und); }
		public TerminalNode Und(int i) {
			return getToken(DulesParser.Und, i);
		}
		public AnswerMatchesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answerMatches; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).enterAnswerMatches(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DulesListener ) ((DulesListener)listener).exitAnswerMatches(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DulesVisitor ) return ((DulesVisitor<? extends T>)visitor).visitAnswerMatches(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswerMatchesContext answerMatches() throws RecognitionException {
		AnswerMatchesContext _localctx = new AnswerMatchesContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_answerMatches);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(String);
			setState(115);
			match(Und);
			setState(116);
			match(String);
			setState(117);
			match(Und);
			setState(118);
			match(String);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
